tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/prototype/S15.11.4_A4.js
assert.throws(TypeError, () => {
  new Error.prototype();
  throw new Test262Error();
});

